--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,9 @@ jobs:
           cd ..
           zip -r AnymeX-iOS-${{ github.ref_name }}-unsigned.ipa Payload
           cd ../../../
-          ./scripts/sign-ipa.sh build/ios/iphoneos/AnymeX-iOS-${{ github.ref_name }}-unsigned.ipa ./certificate.p12 "$P12_PASSWORD" ./profile.mobileprovision AnymeX-iOS-${{ github.ref_name }}.ipa
+          ./scripts/sign-ipa.sh build/ios/iphoneos/AnymeX-iOS-${{ github.ref_name }}-unsigned.ipa ./certificate.p12 "$P12_PASSWORD" ./profile.mobileprovision ./AnymeX-iOS-${{ github.ref_name }}.ipa
+          pwd
+          ls
 
       - name: Release iOS IPA
         uses: ncipollo/release-action@v1
