--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
         continue-on-error: true
 
       - name: Handle iOS Signing Failure
-        if: steps.sign-ipa.outcome != 'success'
+        if: failure()
         run: |
           echo "IPA signing failed, taking alternative action..."
           mv "build/ios/iphoneos/AnymeX-iOS-${{ github.ref_name }}-unsigned.ipa" "AnymeX-iOS-${{ github.ref_name }}.ipa"
