fix failure action again..

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,10 +61,11 @@ jobs:
           zip -r AnymeX-iOS-${{ github.ref_name }}-unsigned.ipa Payload
           cd ../../../
           ./scripts/sign-ipa.sh build/ios/iphoneos/AnymeX-iOS-${{ github.ref_name }}-unsigned.ipa ./certificate.p12 "$P12_PASSWORD" ./profile.mobileprovision ./AnymeX-iOS-${{ github.ref_name }}.ipa
-        continue-on-error: true
+          echo "SIGNING_SUCCESS=true" >> $GITHUB_OUTPUT
+          continue-on-error: true
 
       - name: Handle iOS Signing Failure
-        if: failure()
+        if: steps.build_ios.outputs.SIGNING_SUCCESS != 'true'
         run: |
           echo "IPA signing failed, taking alternative action..."
           mv "build/ios/iphoneos/AnymeX-iOS-${{ github.ref_name }}-unsigned.ipa" ./"AnymeX-iOS-${{ github.ref_name }}.ipa"
